--- a/index.html
+++ b/index.html
@@ -1,16 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+  <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Widget Demo</title>
-
-</script>
-</head>
-<body>
-	<h1>Chat test</h1>
-<script src="https://customerwidget.telavox.com/tvx-customer-widget-app.js?widgetId=fb90e4a6-9964-4f21-a09c-d82334f771a1" charset="utf-8" crossorigin="anonymous" type="text/javascript" defer></script>
-
-
-</body>
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>OLIVER TEST</title>
+    <link rel="stylesheet" href="style.css">
+  </head>
+  <body>
+	<script src="index.js"></script>
+	<script src="https://customerwidget.telavox.com/tvx-customer-widget-app.js?widgetId=fb90e4a6-9964-4f21-a09c-d82334f771a1" charset="utf-8" crossorigin="anonymous" type="text/javascript" defer></script>
+  </body>
 </html>
