--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>OLIVER TEST</title>
+	  <h2>OLIVER CHAT</h2>
 	  <p style="background-image: url('test.jpg');">
 
     <link rel="stylesheet" href="style.css">
