--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@
 	<script src="index.js"></script>
 	<script src="https://customerwidget.telavox.com/tvx-customer-widget-app.js?widgetId=fb90e4a6-9964-4f21-a09c-d82334f771a1" charset="utf-8" crossorigin="anonymous" type="text/javascript" defer></script>
 	  	  <h2>OLIVER CHAT</h2>
-	  <p style="background-image: url('test.jpg');">
+	  <img src="https://i.kym-cdn.com/entries/icons/mobile/000/035/935/cover3.jpg" alt="Spongebob" />
   </body>
 </html>
