--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
   </head>
   <body>
 	<script src="index.js"></script>
-	<script src="https://customerwidget.telavox.com/tvx-customer-widget-app.js?widgetId=fb90e4a6-9964-4f21-a09c-d82334f771a1" charset="utf-8" crossorigin="anonymous" type="text/javascript" defer></script>
-	  	  <h2>OLIVER CHAT</h2>
-	  <img src="https://i.kym-cdn.com/entries/icons/mobile/000/035/935/cover3.jpg" alt="Spongebob" />
+	  <div style="height:500px; widget:600px; border: 1px solid black;">
+		  <script src="https://customerwidget.telavox.com/tvx-customer-widget-app.js?widgetId=fb90e4a6-9964-4f21-a09c-d82334f771a1" charset="utf-8" crossorigin="anonymous" type="text/javascript" defer></script>
+	  	  </div>
+	  <h2>OLIVER CHAT</h2>
   </body>
 </html>
