--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<script src="index.js"></script>
 	  <div style="height:500px; widget:600px; border: 1px solid black;">
 		  <script src="https://customerwidget.telavox.com/tvx-customer-widget-app.js?widgetId=fb90e4a6-9964-4f21-a09c-d82334f771a1" charset="utf-8" crossorigin="anonymous" type="text/javascript" defer></script>
-	  	  </div>
+	  	 <div style="height:500px; widget:600px; border: 1px solid black;">
 	  <h2>OLIVER CHAT</h2>
   </body>
 </html>
