--- a/index.html
+++ b/index.html
@@ -3,12 +3,9 @@
   <head>
 	<link rel="icon" type="image/x-icon" href="chaticon.ico">
     <meta charset="UTF-8">
-	  <link rel="icon" type="image/x-icon" href="chaticon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-	 <link rel="icon" type="image/x-icon" href="chaticon.ico">
-    <title>OLIVER TEST</title>
-	  <link rel="icon" type="image/x-icon" href="chaticon.ico">
+    <title>OLIVER CHATWIDGET</title>
 	  <!-- CSS only -->
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
   </head>
@@ -16,6 +13,6 @@
 	<script src="index.js"></script>
 	  <div style = "position:absolute; left:80px; top:20px;">
 		  <script src="https://customerwidget.telavox.com/tvx-customer-widget-app.js?widgetId=f6f93ce4-e9d0-4c21-98bf-d5e641ccc4b4" charset="utf-8" crossorigin="anonymous" type="text/javascript" defer></script>
-	  <h2>OLIVER CHAT</h2>
+	  <h2>OLIVER CHATWIDGET TESTERererer</h2>
   </body>
 </html>
