--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
 	  <div style = "position:absolute; left:80px; top:20px;">
 		  <script src="https://customerwidget.telavox.com/tvx-customer-widget-app.js?widgetId=4b36691b-e57a-47d7-bf03-197ce8147b51" charset="utf-8" crossorigin="anonymous" type="text/javascript" defer></script>
 	  <h2>OLIVER CHATWIDGET TESTERererer</h2>
-		  <a href="tel:6200502">+testtest<br></a>
+		  <a href="tel:0406200502">test1<br></a>
+		 <a href="tel:+46406200502">test2+<br></a>
+		  <a href="tel:+11406200502">test3+<br></a>
   </body>
 </html>
