--- a/index.html
+++ b/index.html
@@ -1,21 +1,26 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-	<link rel="icon" type="image/x-icon" href="chaticon.ico">
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>OLIVER CHATWIDGET</title>
-	  <!-- CSS only -->
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-  </head>
-  <body>
-	<script src="index.js"></script>
-	  <div style = "position:absolute; left:80px; top:20px;">
-		  <script src="https://customerwidget.telavox.com/tvx-customer-widget-app.js?widgetId=4b36691b-e57a-47d7-bf03-197ce8147b51" charset="utf-8" crossorigin="anonymous" type="text/javascript" defer></script>
-	  <h2>OLIVER CHATWIDGET TESTERererer</h2>
-		  <a href="tel:0406200502">test1<br></a>
-		 <a href="tel:+46406200502">test2+<br></a>
-		  <a href="tel:+11406200502">test3+<br></a>
-  </body>
+<html>
+<head>
+    <title>Quarter Downtime Calculator</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <div class="container">
+        <h1>Quarter Downtime Calculator</h1>
+        <form id="calc-form">
+            <label for="quarter-select">Select a quarter:</label>
+            <select id="quarter-select">
+                <option value="Q1">Q1</option>
+                <option value="Q2">Q2</option>
+                <option value="Q3">Q3</option>
+                <option value="Q4">Q4</option>
+            </select>
+            <label for="downtime-input">Insert downtime (in minutes):</label>
+            <input type="number" id="downtime-input">
+            <button type="submit">Calculate</button>
+        </form>
+        <div id="result"></div>
+    </div>
+    <script src="script.js"></script>
+</body>
 </html>
