--- a/index.html
+++ b/index.html
@@ -1,26 +1,19 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <title>Quarter Downtime Calculator</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-    <div class="container">
-        <h1>Quarter Downtime Calculator</h1>
-        <form id="calc-form">
-            <label for="quarter-select">Select a quarter:</label>
-            <select id="quarter-select">
-                <option value="Q1">Q1</option>
-                <option value="Q2">Q2</option>
-                <option value="Q3">Q3</option>
-                <option value="Q4">Q4</option>
-            </select>
-            <label for="downtime-input">Insert downtime (in minutes):</label>
-            <input type="number" id="downtime-input">
-            <button type="submit">Calculate</button>
-        </form>
-        <div id="result"></div>
-    </div>
-    <script src="script.js"></script>
-</body>
-</html>
+<h2>Select Quarter and Input Downtime:</h2>
+<form>
+  <label for="quarter">Select Quarter:</label>
+  <select id="quarter" name="quarter">
+    <option value="129600">Q1</option>
+    <option value="131040">Q2</option>
+    <option value="132480">Q3</option>
+    <option value="132480">Q4</option>
+  </select>
+  <br><br>
+  <label for="downtime">Downtime (in minutes):</label>
+  <input type="number" id="downtime" name="downtime" value="">
+  <br><br>
+  <button type="button" onclick="calculate()">Calculate</button>
+</form>
+
+<p id="result"></p>
+
+<script src="script.js"></script>
