--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   <button type="button" onclick="calculate()">Calculate</button>
 </form>
 
-<p id="result"></p>
+<p id="output"></p>
 
 <script src="script.js"></script>
+<script src="https://customerwidget.telavox.com/tvx-customer-widget-app.js?widgetId=4b36691b-e57a-47d7-bf03-197ce8147b51" charset="utf-8" crossorigin="anonymous" type="text/javascript" defer></script>
