--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<h2>Select Quarter and Input Downtime:</h2>
+<h2>Select Quarter and Input Total Downtime:</h2>
 <form>
   <label for="quarter">Select Quarter:</label>
   <select id="quarter" name="quarter">
@@ -8,7 +8,7 @@
     <option value="132480">Q4</option>
   </select>
   <br><br>
-  <label for="downtime">Downtime (in minutes):</label>
+  <label for="downtime">Total Downtime (in minutes):</label>
   <input type="number" id="downtime" name="downtime" value="">
   <br><br>
   <button type="button" onclick="calculate()">Calculate</button>
@@ -17,4 +17,3 @@
 <p id="output"></p>
 
 <script src="script.js"></script>
-<script src="https://customerwidget.telavox.com/tvx-customer-widget-app.js?widgetId=4b36691b-e57a-47d7-bf03-197ce8147b51" charset="utf-8" crossorigin="anonymous" type="text/javascript" defer></script>
