--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
-<h2>Select Quarter and Input Total Downtime:</h2>
+<h2>ÜBERMEGA SLA CALCULATOR:</h2>
 <form>
-  <label for="quarter">Select Quarter:</label>
+  <label for="quarter">Select quarter:</label>
   <select id="quarter" name="quarter">
     <option value="129600">Q1</option>
     <option value="131040">Q2</option>
@@ -8,7 +8,7 @@
     <option value="132480">Q4</option>
   </select>
   <br><br>
-  <label for="downtime">Total Downtime (in minutes):</label>
+  <label for="downtime">Total downtime (in minutes):</label>
   <input type="number" id="downtime" name="downtime" value="">
   <br><br>
   <button type="button" onclick="calculate()">Calculate</button>
