Adding leap year

--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
         <label for="quarter">Select quarter:</label>
         <select id="quarter" name="quarter">
           <option value="129600">Q1</option>
+           <option value="131040">Q1 (leap year)</option>
           <option value="131040">Q2</option>
           <option value="132480">Q3</option>
           <option value="132480">Q4</option>
