--- a/index.html
+++ b/index.html
@@ -1,74 +1,18 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
-    <title>ÜBERMEGA SLA CALCULATOR</title>
-    <style>
-      body {
-        font-family: Arial, sans-serif;
-        margin: 0;
-        padding: 0;
-      }
-      .container {
-        width: 400px;
-        margin: 20px auto;
-        border: 1px solid #ccc;
-        padding: 20px;
-        text-align: center;
-      }
-      h2 {
-        margin-top: 0;
-      }
-      label {
-        display: block;
-        margin-bottom: 10px;
-        text-align: left;
-      }
-      input[type="number"] {
-        width: 100%;
-        padding: 5px;
-        margin-bottom: 10px;
-        box-sizing: border-box;
-      }
-      select {
-        width: 100%;
-        padding: 5px;
-        margin-bottom: 10px;
-        box-sizing: border-box;
-      }
-      button {
-        padding: 10px;
-        background-color: #4CAF50;
-        color: white;
-        border: none;
-        cursor: pointer;
-      }
-      button:hover {
-        background-color: #3e8e41;
-      }
-      #output {
-        margin-top: 20px;
-        font-size: 20px;
-      }
-    </style>
+	<link rel="icon" type="image/x-icon" href="chaticon.ico">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>OLIVER CHATWIDGET</title>
+	  <!-- CSS only -->
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
   </head>
   <body>
-    <div class="container">
-      <h2>ÜBERMEGA SLA CALCULATOR:</h2>
-      <form>
-        <label for="quarter">Select quarter:</label>
-        <select id="quarter" name="quarter">
-          <option value="129600">Q1</option>
-           <option value="131040">Q1 (leap year)</option>
-          <option value="131040">Q2</option>
-          <option value="132480">Q3</option>
-          <option value="132480">Q4</option>
-        </select>
-        <label for="downtime">Total downtime (in minutes):</label>
-        <input type="number" id="downtime" name="downtime" value="">
-        <button type="button" onclick="calculate()">Calculate</button>
-      </form>
-      <p id="output"></p>
-    </div>
-    <script src="script.js"></script>
+	<script src="index.js"></script>
+	  <div style = "position:absolute; left:80px; top:20px;">
+		  <script src="https://customerwidget.telavox.com/tvx-customer-widget-app.js?widgetId=4b36691b-e57a-47d7-bf03-197ce8147b51" charset="utf-8" crossorigin="anonymous" type="text/javascript" defer></script>
+	  <h2>OLIVER CHATWIDGET TESTERererer</h2>
   </body>
 </html>
