--- a/index.html
+++ b/index.html
@@ -1,18 +1,59 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-	<link rel="icon" type="image/x-icon" href="chaticon.ico">
+<head>
+    <link rel="icon" type="image/x-icon" href="chaticon.ico">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>OLIVER CHATWIDGET</title>
-	  <!-- CSS only -->
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-  </head>
-  <body>
-	<script src="index.js"></script>
-	  <div style = "position:absolute; left:80px; top:20px;">
-		  <script src="https://customerwidget.telavox.com/tvx-customer-widget-app.js?widgetId=4b36691b-e57a-47d7-bf03-197ce8147b51" charset="utf-8" crossorigin="anonymous" type="text/javascript" defer></script>
-	  <h2>OLIVER CHATWIDGET TESTERererer</h2>
-  </body>
+    <!-- CSS only -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <style>
+        .arrow-container {
+            position: absolute;
+            left: 80px;
+            top: 20px;
+            cursor: pointer;
+            z-index: 999;
+        }
+
+        .arrow {
+            width: 0;
+            height: 0;
+            border-left: 10px solid transparent;
+            border-right: 10px solid transparent;
+            border-bottom: 20px solid #000; /* Change color as needed */
+            position: absolute;
+            top: -25px;
+            left: 50%;
+            transform: translateX(-50%);
+        }
+
+        .arrow-text {
+            position: absolute;
+            top: -40px;
+            left: 50%;
+            transform: translateX(-50%);
+            color: #000; /* Change color as needed */
+        }
+    </style>
+</head>
+<body>
+<script src="index.js"></script>
+<div class="arrow-container" onclick="hideArrow()">
+    <div class="arrow"></div>
+    <div class="arrow-text">Click me</div>
+</div>
+<div style="position:absolute; left:80px; top:60px;">
+    <script src="https://customerwidget.telavox.com/tvx-customer-widget-app.js?widgetId=4b36691b-e57a-47d7-bf03-197ce8147b51" charset="utf-8" crossorigin="anonymous" type="text/javascript" defer></script>
+    <h2>OLIVER CHATWIDGET TEST</h2>
+</div>
+
+<script>
+    function hideArrow() {
+        var arrowContainer = document.querySelector('.arrow-container');
+        arrowContainer.style.display = 'none';
+    }
+</script>
+</body>
 </html>
