--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   </head>
   <body>
 	<script src="index.js"></script>
-	  <div style = "position:absolute; left:80px; top:20px;">
+	  <div style = "position:relative; left:80px; top:20px;">
 		  <script src="https://customerwidget.telavox.com/tvx-customer-widget-app.js?widgetId=4b36691b-e57a-47d7-bf03-197ce8147b51" charset="utf-8" crossorigin="anonymous" type="text/javascript" defer></script>
 	  <h2>OLIVER CHATWIDGET TEST</h2>
   </body>
