--- a/index.html
+++ b/index.html
@@ -1,18 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-	<link rel="icon" type="image/x-icon" href="chaticon.ico">
+<head>
+    <link rel="icon" type="image/x-icon" href="chaticon.ico">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>OLIVER CHATWIDGET</title>
-	  <!-- CSS only -->
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-  </head>
-  <body>
-	<script src="index.js"></script>
-	  <div style = "position:relative; left:80px; top:20px;">
-		  <script src="https://customerwidget.telavox.com/tvx-customer-widget-app.js?widgetId=4b36691b-e57a-47d7-bf03-197ce8147b51" charset="utf-8" crossorigin="anonymous" type="text/javascript" defer></script>
-	  <h2>OLIVER CHATWIDGET TEST</h2>
-  </body>
+    <!-- CSS only -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+
+    <style>
+        /* Adjust the size of the widget using viewport units */
+        .widget-container {
+            position: relative;
+            width: 90vw; /* 90% of the viewport width */
+            height: 90vh; /* 90% of the viewport height */
+            margin: 5vh auto; /* Center the widget vertically */
+        }
+
+        /* Define different styles for smaller screens using media queries */
+        @media (max-width: 768px) {
+            .widget-container {
+                width: 95vw; /* Adjust the width for smaller screens */
+                height: 95vh; /* Adjust the height for smaller screens */
+            }
+        }
+    </style>
+</head>
+<body>
+<script src="index.js"></script>
+<div class="widget-container">
+    <script src="https://customerwidget.telavox.com/tvx-customer-widget-app.js?widgetId=4b36691b-e57a-47d7-bf03-197ce8147b51" charset="utf-8" crossorigin="anonymous" type="text/javascript" defer></script>
+    <h2>OLIVER CHATWIDGET TEST</h2>
+</div>
+</body>
 </html>
